# snowflake

./: .gitignore  README.md  pyproject.toml  setup.py  subdomains.txt
snowflake/: formatter.py  main.py
src/snowflake/: __init__.py  bruteforce.py  files.py  formatter.py  helper.py  main.py  params.py  subdomain.py  wrapper.py
