[project]
name = "snowflake"
version = "1.0"

[project.scripts]
snowflake = "snowflake.main:main_func"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/snowflake/*.py",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
