[project]
name = "snowflake"
version = "1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]



[project.scripts]
snowflake = "snowflake.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snowflake"
version = "1.0"
license = "MIT"
description = "A work in progress recon tool for bug bounty"
authors = [
    "winter"
]

